# game

./: .gitignore  CMakeLists.txt
containers/: TVector.h
framework/common/: THashable.h
framework/eventmanager/: CEvent.cpp  CEvent.h  CEventManager.cpp  CEventManager.h  CMakeLists.txt  CSubscriberMap.cpp  CSubscriberMap.h
framework/glmanager/: CGLManager.cpp  CGLManager.h  CMakeLists.txt
framework/pluginloader/: CLookupPluggable.h  CMakeLists.txt  CPluginLoader.cpp  CPluginLoader.h  IPluggable.cpp  IPluggable.h
framework/pluginloader/test/: CMakeLists.txt  CPluggableStub.cpp  CPluggableStub.h  simplePluginTest.cpp
framework/plugins/display/: CDisplayPlugin.cpp  CDisplayPlugin.h  CMakeLists.txt
framework/plugins/display/test/: CMakeLists.txt  fragShader.frag  gradiantShader.frag  log4cxx.xml  pluginLoaderTestConfig.json.in  simplePluginTest.cpp
framework/plugins/glmanager/: CGLManager.cpp  CGLManager.h  CMakeLists.txt  GLManagerEvents.h
framework/plugins/glmanager/test/: CMakeLists.txt  managerTest.cpp
framework/plugins/keyboard/: CKeyboardPlugin.cpp  CKeyboardPlugin.h  CMakeLists.txt
framework/plugins/renderable/: CMakeLists.txt  IRenderable.cpp  IRenderable.h  IShadable.cpp  IShadable.h
framework/plugins/renderable/plugins/: CMakeLists.txt  CSimpleAnimatableTrianglePlugin.cpp  CSimpleAnimatableTrianglePlugin.h  CSimpleTrianglePlugin.cpp  CSimpleTrianglePlugin.h
framework/plugins/renderablemanager/: CMakeLists.txt  CRenderableManagerPlugin.h  RenderableManagerTypes.h
framework/plugins/scenemanager/: CMakeLists.txt  CSceneDB.cpp  CSceneDB.h  CSceneManagerPlugin.cpp  CSceneManagerPlugin.h  SceneDB.h  SceneManagerCommon.h  scenes.json.in
framework/plugins/shadermanager/: CMakeLists.txt  CShaderDB.cpp  CShaderDB.h  CShaderManagerPlugin.cpp  CShaderManagerPlugin.h  ShaderManagerCommon.h  shaders.json.in
framework/shaders/: fragShader.frag  gradiantShader.frag  shader.vert
logger/test/: CMakeLists.txt  simpleLoggerTest.cpp
main/: CMakeLists.txt  main.cpp
scene/world/: CMakeLists.txt  CWorldRoot.h
